--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Geist Font Family - Modern Swiss/Industrial Standard -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/geist@1.3.0/dist/fonts/geist-sans/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/geist@1.3.0/dist/fonts/geist-mono/style.css" />
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              mono: ['JetBrains Mono', 'monospace'],
+              sans: ['Geist Sans', 'Inter', 'sans-serif'],
+              mono: ['Geist Mono', 'monospace'],
             },
             colors: {
               'swiss-black': '#050505',
@@ -33,6 +33,7 @@
         background-color: #ffffff;
         color: #050505;
         -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
         overflow-x: hidden;
       }
       .perspective-container {
@@ -52,6 +53,10 @@
       }
       .mono-ticker {
         font-variant-numeric: tabular-nums;
+      }
+      /* Ensure typography is consistently tight for the Swiss look */
+      h1, h2, h3 {
+        letter-spacing: -0.05em;
       }
     </style>
   <script type="importmap">
